cmake_minimum_required(VERSION 3.13)
project(LeetCode)

set(CMAKE_CXX_STANDARD 17)

add_executable(LeetCode-longest-absolute-file-path longest-absolute-file-path/main.cpp)
add_executable(LeetCode-regular-expression-matching regular-expression-matching/main.cpp)
add_executable(LeetCode-valid-number valid-number/main.cpp)
add_executable(LeetCode-max-points-on-a-line max-points-on-a-line/main.cpp)
